--- a/app/package.json
+++ b/app/package.json
@@ -9,8 +9,10 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "gh-pages": "^3.1.0",
+    "lodash": "^4.17.19",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-page-scroller": "^2.0.7-beta",
     "react-scripts": "3.4.1"
   },
   "scripts": {
