--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.2",
     "gh-pages": "^3.1.0",
     "lodash": "^4.17.19",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-page-scroller": "^2.0.7-beta",
